squid (2.6.5-1wm2) edgy; urgency=low
  * Include a proposed patch for squid bug #1818, COSS rebuild crashes
  * Never strip binaries



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17439 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/rules
+++ b/debs/squid/debian/rules
@@ -27,9 +27,9 @@ CFLAGS += -O0
 else
 CFLAGS += -O2
 endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-INSTALL_PROGRAM += -s
-endif
+#ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+#INSTALL_PROGRAM += -s
+#endif
 
 # Take account of old dpkg-architecture output.
 ifeq ($(DEB_HOST_ARCH_CPU),)
