--- a/ubuntu/autoinstall/common.cfg
+++ b/ubuntu/autoinstall/common.cfg
@@ -29,15 +29,15 @@ d-i     apt-setup/universe      boolean true
 
 # Wikimedia's APT repository
 d-i	apt-setup/local0/comment	string	Wikimedia APT repository
-d-i	apt-setup/local0/repository	string	http://apt.wikimedia.org/wikimedia dapper-wikimedia main restricted universe multiverse
+#d-i	apt-setup/local0/repository	string	http://apt.wikimedia.org/wikimedia dapper-wikimedia main restricted universe multiverse
 d-i	apt-setup/local0/source		boolean	true
 d-i	apt-setup/local0/key		string	http://apt.wikimedia.org/autoinstall/keyring/wikimedia-archive-keyring.gpg
 
 # Architecture specific settings (kernels etc)
 d-i     preseed/include_command string  echo $(uname -m).cfg
 
-# Redo network configuration statically
-d-i	preseed/early_command	string	echo d-i netcfg/get_ipaddress string $(ifconfig | grep "inet addr" | cut -d ' ' -f 12 | sed 's/addr://' | grep -v 127\.0\.0\.1) > /tmp/static_net.cfg && debconf-set-selections /tmp/static_net.cfg && killall.sh; netcfg; true
+# Early command
+d-i	preseed/early_command	string	wget -O /tmp/early_command http://apt.wikimedia.org/autoinstall/scripts/early_command && sh /tmp/early_command
 
-# Individual additional packages to install
+# Late command, in the finish-install stage
 d-i	preseed/late_command	string	wget -O /tmp/late_command http://apt.wikimedia.org/autoinstall/scripts/late_command && sh /tmp/late_command
