--- a/ubuntu/autoinstall/yaseo.cfg
+++ b/ubuntu/autoinstall/yaseo.cfg
@@ -15,7 +15,7 @@ d-i	netcfg/get_domain	string	unassigned-domain
 d-i	netcfg/wireless_wep	string 
 
 ### Mirror settings
-d-i	mirror/country	select	KR
+d-i	mirror/country	select	TW
 d-i	mirror/http/mirror	select	tw.archive.ubuntu.com
 d-i	mirror/http/directory	string	/ubuntu/
 d-i	mirror/http/proxy	string
