document host routing
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17585 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -25,6 +25,12 @@ backend-group "backup" {
 	 * request host, not the pathname).
 	 */
 	lb-type = carp;
+
+	/*
+	 * This group will always get requests for www[2].bar.com, no
+	 * matter which listener received the request.
+	 */
+	hosts = "www.bar.com", "www2.bar.com";
 };
 
 backend "backends.mycompany.com" {
