let certain clients override normal backend selection using X-Willow-Backend-Group header
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17587 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -128,6 +128,13 @@ cache {
 	 * the Host: header.
 	 */
 	default-host = "localhost";
+
+	/*
+	 * These clients will be able to override the usual backend by
+	 * sending a header of the form "X-Willow-Backend-Group: <name>"
+	 * with their request.
+	 */
+	force-backend = "127.0.0.0/8";
 };
 
 /*
