--- a/ubuntu/autoinstall/knams.cfg
+++ b/ubuntu/autoinstall/knams.cfg
@@ -16,6 +16,7 @@ d-i	netcfg/wireless_wep	string
 
 ### Mirror settings
 d-i	mirror/country	select	NL
+d-i	mirror/http/countries	select	NL
 d-i	mirror/http/mirror	select	nl.archive.ubuntu.com
 d-i	mirror/http/directory	string	/ubuntu/
 d-i	mirror/http/proxy	string
