Because get_domain doesn't have a default at knams, set it explicitly
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17624 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/knams.cfg
+++ b/ubuntu/autoinstall/knams.cfg
@@ -5,6 +5,7 @@ d-i	netcfg/choose_interface	select	auto
 
 d-i	netcfg/disable_dhcp	boolean	true
 # ip address is taken from DHCP, rest is set here
+d-i	netcfg/get_domain	string	knams.wikimedia.org
 d-i	netcfg/get_netmask	string	255.255.255.224
 d-i	netcfg/get_gateway	string	145.97.39.129
 d-i	netcfg/get_nameservers	string	145.97.39.130 145.97.39.135
