The knams hack doesn't work as the hostname is needed anyway
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17631 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/netboot.cfg
+++ b/ubuntu/autoinstall/netboot.cfg
@@ -3,4 +3,4 @@
 # Generally we'll do a basic server install.
 d-i	preseed/include	string	common.cfg passwd.cfg override.cfg
 
-d-i	preseed/include_command	string	case $(debconf-get netcfg/get_domain) in wikimedia.org) echo pmtpa.cfg ;; knams.wikimedia.org) echo knams.cfg ;; yaseo.wikimedia.org) echo yaseo.cfg ;; *) case $(ifconfig | grep "inet addr" | cut -d ' ' -f 12 | sed 's/addr://' | grep -v 127\.0\.0\.1) in 145.97.39.*) echo knams.cfg ;; esac ;; esac; case $(debconf-get netcfg/get_hostname) in sq[13]|sq[0-9][0-9]|knsq*|yf100[0-9]|yf101[0-7]|clematis|sage|ragweed) echo squid.cfg ;; esac
+d-i	preseed/include_command	string	case $(debconf-get netcfg/get_domain) in wikimedia.org) echo pmtpa.cfg ;; knams.wikimedia.org) echo knams.cfg ;; yaseo.wikimedia.org) echo yaseo.cfg ;; esac; case $(debconf-get netcfg/get_hostname) in sq[13]|sq[0-9][0-9]|knsq*|yf100[0-9]|yf101[0-7]|clematis|sage|ragweed) echo squid.cfg ;; esac
