squid (2.6.5-1wm3) edgy; urgency=low
  * Fix 'dd' line in initscript 'clean'



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17649 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/squid.rc
+++ b/debs/squid/debian/squid.rc
@@ -79,7 +79,7 @@ clean_coss() {
 		if [ -w $cossfile -a -n "$cosssize" -a $cosssize -gt 0 ]
 		then
 			gid=`grepconf cache_effective_group proxy`
-			su $gid dd if=/dev/zero bs=1048576 count=$cosssize of=$cossfile || exit 1
+			su $gid -c "/bin/dd if=/dev/zero bs=1048576 count=$cosssize of=$cossfile" || exit 1
 		fi
 	done
 }
@@ -185,6 +185,7 @@ case "$1" in
 	;;
     clean)
 	log_action_msg "Cleaning cache directories"
+	prepare_coss
 	clean_coss
 	;;
     *)
