make keepalive optional
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17652 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -135,6 +135,17 @@ cache {
 	 * with their request.
 	 */
 	force-backend = "127.0.0.0/8";
+
+	/*
+	 * Enable HTTP keep-alive for backends or clients.  If enabled for
+	 * backends, keepalive-max is the maximum number of backends to
+	 * cache (0 = unlimited).  keepalive-max is per thread, e.g. if
+	 * you have 5 threads and keepalive-max = 10, up to 50 backends
+	 * will be cached.
+	 */
+	backend-keepalive = yes;
+	client-keepalive = yes;
+	keepalive-max = 0;
 };
 
 /*
