experimental support for in-memory caching
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17688 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/willow/Makefile.in
+++ b/willow/src/willow/Makefile.in
@@ -3,19 +3,19 @@ BINDIR = @bindir@
 CPPFLAGS = -I../include
 
 BASESRCS =	 		\
-	willow.cc 		\
+	cache.cc		\
+	chunking.cc		\
+	confparse.cc		\
+	flowio.cc		\
+	format.cc		\
+	radix.cc		\
+	wbackend.cc		\
 	wconfig.cc		\
 	whttp.cc		\
-	chunking.cc		\
-	wbackend.cc		\
-	wcache.cc		\
-	confparse.cc		\
-	wnet.cc			\
-	wlog.cc			\
 	whttp_header.cc		\
-	radix.cc		\
-	format.cc		\
-	flowio.cc
+	willow.cc 		\
+	wlog.cc			\
+	wnet.cc			\
 
 OBJS=	$(BASESRCS:.cc=.o)
 
