start on-disk backing for memory cache
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17726 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/configure.in
+++ b/willow/configure.in
@@ -120,6 +120,7 @@ AC_SEARCH_LIBS(log10, m)
 AC_SEARCH_LIBS(sendfile, sendfile)
 AC_SEARCH_LIBS(zlibVersion, z,,AC_MSG_ERROR([zlib not found]))
 AC_SEARCH_LIBS(pthread_key_create, pthread)
+AC_SEARCH_LIBS(db_create, db-4.3)
 
 AC_CHECK_FUNC(strlcat,AC_DEFINE([HAVE_STRLCAT],,[Define this if you have strlcat()]),[AC_LIBOBJ(strlcat)])
 AC_CHECK_FUNC(strlcpy,AC_DEFINE([HAVE_STRLCPY],,[Define this if you have strlcpy()]),[AC_LIBOBJ(strlcpy)])
