should support multiple cache-dirs with load balancing
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17767 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/willow/Makefile.in
+++ b/willow/src/willow/Makefile.in
@@ -3,7 +3,10 @@ BINDIR = @bindir@
 CPPFLAGS = -I../include
 
 BASESRCS =	 		\
+	a_cachedir.cc		\
 	cache.cc		\
+	cachedentity.cc		\
+	cachedir_data_store.cc	\
 	chunking.cc		\
 	confparse.cc		\
 	dbwrap.cc		\
