--- a/willow/mk/depend.dashM.mk.in
+++ b/willow/mk/depend.dashM.mk.in
@@ -7,6 +7,6 @@ depend: $(SRCS)
 	@mv Makefile Makefile.depend
 	@sed -e '/#DO NOT DELETE/,$$d' <Makefile.depend >Makefile
 	@echo "#DO NOT DELETE -- make depend needs it" >>Makefile
-	@@CC@ $(_CPPFLAGS) $(CPPFLAGS) @dashMflag@ $(SRCS) >>Makefile 2>/dev/null
+	@@CXX@ $(_CPPFLAGS) $(CPPFLAGS) $(_CFLAGS) $(CFLAGS) @dashMflag@ $(SRCS) >>Makefile 2>/dev/null
 	@rm -f Makefile.depend
 
