--- a/willow/configure.in
+++ b/willow/configure.in
@@ -3,19 +3,7 @@
 AC_INIT(willow, 1.0-cvs, river@attenuate.org)
 
 USER_CXXFLAGS="$CXXFLAGS"
-
-# autoconf brokenness
-if test -z "$CC"; then
-	CC=cc
-fi
-
-gcc_common="-W -Wall -Wno-unused -g"
-debug_cxxflags_gcc="$gcc_common -O0"
-prod_cxxflags_gcc="$gcc_common -O3"
-sunpro_common="-errshort=tags -errtags -mc -xc99"
-debug_cxxflags_sunpro="-g $sunpro_common -v -xs"
-prod_cxxflags_sunpro="-fast $sunpro_common -xdepend=yes -xipo=2 -xalias_level=std"
-
+CPPFLAGS="-D_REENTRANT $CPPFLAGS"
 AC_CONFIG_HEADER(src/include/config.h)
 
 echo ""
@@ -38,16 +26,45 @@ else
 	AC_MSG_RESULT(no)
 fi
 
-mycxxflags=$prod_cxxflags
+testflag() {
+	AC_MSG_CHECKING([whether $CXX supports $1])
+	touch test.cc
+	if test -z "`$CXX -c $1 test.cc 2>&1`"; then
+		extraflags="$extraflags $1"
+		AC_MSG_RESULT(yes)
+	else
+		AC_MSG_RESULT(no)
+	fi
+	rm -f test.cc test.o
+}
+
+testflag -library=stlport4
+testflag -Wextra
+testflag -Wall
+testflag -Wno-unused
+testflag -g
+testflag -mt
+if test ! "$ac_cv_cxx_compiler_gnu" = "yes"; then
+	testflag -errtags
+fi
+testflag -mc
+
 AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],[Compile with debug support]),
 [	if test $enableval = yes; then
 		AC_DEFINE([WILLOW_DEBUG], [], [Compile with debug support])
-		mycxxflags=$debug_cxxflags
+		testflag -xs
+		testflag -xO0
+	else
+		testflag -O3
+		testflag -fast
+		testflag -xdepend=yes
+		testflag -xipo=2
+		testflag -xalias_level=std
 	fi
 ])
 
 if test -z "$USER_CXXFLAGS"; then
-	USE_CXXFLAGS=$mycxxflags
+	USE_CXXFLAGS="$mycxxflags $extraflags"
 else
 	USE_CXXFLAGS=$USER_CXXFLAGS
 fi
@@ -112,6 +129,13 @@ AC_SUBST(M_FLAGS)
 
 AC_SUBST(dependstyle)
 
+AC_ARG_WITH(libevent, AC_HELP_STRING([--with-libevent=PATH],[prefix where libevent is installed]),[
+	CPPFLAGS="$CPPFLAGS -I${withval}/include" LDFLAGS="$LDFLAGS -L${withval}/lib"],)
+AC_ARG_WITH(zlib, AC_HELP_STRING([--with-zlib=PATH],[prefix where zlib is installed]),[
+	CPPFLAGS="$CPPFLAGS -I${withval}/include" LDFLAGS="$LDFLAGS -L${withval}/lib"],)
+AC_ARG_WITH(bdb, AC_HELP_STRING([--with-bdb=PATH],[prefix where Oracle Berkeley DB is installed]),[
+	CPPFLAGS="$CPPFLAGS -I${withval}/include" LDFLAGS="$LDFLAGS -L${withval}/lib"],)
+
 echo ""
 echo "looking for required C functions..."
 AC_SEARCH_LIBS(socket, socket)
@@ -120,6 +144,7 @@ AC_SEARCH_LIBS(log10, m)
 AC_SEARCH_LIBS(sendfile, sendfile)
 AC_SEARCH_LIBS(zlibVersion, z,,AC_MSG_ERROR([zlib not found]))
 AC_SEARCH_LIBS(pthread_key_create, pthread)
+AC_SEARCH_LIBS(event_add, event,,AC_MSG_ERROR([libevent not found (maybe you need --with-libevent)]))
 AC_SEARCH_LIBS(db_create, db-4.5 db-4.4 db-4.3 db-4.2,,AC_MSG_ERROR([Berkeley DB not found]))
 
 AC_CHECK_TYPES([u_int8_t, u_int16_t, u_int32_t, u_int64_t])
@@ -134,7 +159,6 @@ AC_CHECK_HEADER([sys/queue.h],AC_DEFINE([HAVE_SYS_QUEUE_H],,[Define this if you 
 AC_CHECK_HEADER([sys/sendfile.h],AC_DEFINE([HAVE_SYS_SENDFILE_H],,[Define this if you have <sys/sendfile.h>]))
 AC_CHECK_HEADER([zlib.h],,AC_MSG_ERROR([zlib not found]))
 
-AC_CHECK_LIB(event, event_add, [],[AC_ERROR([libevent not found])])
 
 datadir="${datadir}/willow"
 CXXFLAGS="$USE_CXXFLAGS"
