HTCP: TST, NOP, & HMAC-MD5 auth
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17805 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/configure.in
+++ b/willow/configure.in
@@ -184,7 +184,9 @@ AC_OUTPUT(
 	mk/Makefile
 	Makefile 
 	src/Makefile 
+	src/libwillow/Makefile
 	src/willow/Makefile
 	src/wreadlog/Makefile
 	src/wgetstats/Makefile
+	src/whtcp/Makefile
 	errors/Makefile)
