--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -7,7 +7,7 @@
 
 /*
  * As well as configuration, this file can contain the preprocessor directives
- * "%if", "%pragma" and "%include".
+ * "%if", "%ifdef", "%ifndef", "%pragma" and "%include".
  *
  * %if allows a section of the file to be * dependant on a particular condition.
  * There are two built-in conditions: "true" (which is always true) and "false"
@@ -24,6 +24,10 @@
  *  %else
  *    backend "remote.host";
  *  %endif
+ *
+ * Also available are %ifdef and %ifndef.  These include the enclosed section
+ * if the given condition is or isn't defined, respectively, no matter what its
+ * value is.
  *
  * %include inserts the contents of an existing file at the point it's used.
  *
