document %if defined()
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17815 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -15,11 +15,11 @@
  * -Dcond[=value] on the command line (value should be an integer; default is 1).
  *
  * The following operators are supported, with the same meaning as their C
- * counterparts: + - * / % ~ && || ! & | ^ << >> < > <= >= == !=
+ * counterparts: + - * / % ~ && || ! & | ^ << >> < > <= >= == != defined()
  *
  * Example:
  *
- *  %if testing_server && !use_remote
+ *  %if (defined(testing_server) && !use_remote) || (force_localhost == 1)
  *    backend "localhost";
  *  %else
  *    backend "remote.host";
