--- a/willow/configure.in
+++ b/willow/configure.in
@@ -54,6 +54,7 @@ AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],[Compile with debug support
 		AC_DEFINE([WILLOW_DEBUG], [], [Compile with debug support])
 		testflag -xs
 		testflag -xO0
+		testflag -ggdb
 	else
 		testflag -O3
 		testflag -fast
