wreadlog code is a mess, needs cleanup
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17861 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/wreadlog/Makefile.in
+++ b/willow/src/wreadlog/Makefile.in
@@ -3,8 +3,10 @@ PROGRAM		= wreadlog
 BINDIR		= @bindir@
 CPPFLAGS	= -I../include
 BASESRCS =	 		\
+	acl.cc			\
+	packet_decoder.cc	\
+	topurl_printer.cc	\
 	wreadlog.cc		\
-	acl.cc
 
 OBJS=	$(BASESRCS:.cc=.o)
 
