rename wfoo -> foo
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17873 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/configure.in
+++ b/willow/configure.in
@@ -4,7 +4,7 @@ AC_INIT(willow, 1.0-cvs, river@attenuate.org)
 
 USER_CXXFLAGS="$CXXFLAGS"
 CPPFLAGS="-D_REENTRANT $CPPFLAGS"
-AC_CONFIG_HEADER(src/include/config.h)
+AC_CONFIG_HEADER(src/include/autoconf.h)
 
 echo ""
 echo "examining environment..."
