--- a/willow/errors/Makefile.in
+++ b/willow/errors/Makefile.in
@@ -1,6 +1,13 @@
-# @(#) $Header$
-# 
+# Willow: Lightweight HTTP reverse-proxy.
 # Error messages.
+# Copyright (c) 2005, 2006 River Tarnell <river@attenuate.org>.
+#
+# Permission is granted to anyone to use this software for any purpose,
+# including commercial applications, and to alter it and redistribute it
+# freely. This software is provided 'as-is', without any express or implied
+# warranty.
+
+# @(#) $Id$
 
 DATADIR=errors
 DATAFILES=\
