--- a/willow/src/willow/Makefile.in
+++ b/willow/src/willow/Makefile.in
@@ -1,3 +1,13 @@
+# Willow: Lightweight HTTP reverse-proxy.
+# Copyright (c) 2005, 2006 River Tarnell <river@attenuate.org>.
+#
+# Permission is granted to anyone to use this software for any purpose,
+# including commercial applications, and to alter it and redistribute it
+# freely. This software is provided 'as-is', without any express or implied
+# warranty.
+
+# $Id$
+
 PROGRAM = willow
 BINDIR = @bindir@
 CPPFLAGS = -I../include
