move acl implementation to libwillow and document it
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17878 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/wreadlog/Makefile.in
+++ b/willow/src/wreadlog/Makefile.in
@@ -12,7 +12,6 @@ PROGRAM		= wreadlog
 BINDIR		= @bindir@
 CPPFLAGS	= -I../include
 BASESRCS =	 		\
-	acl.cc			\
 	packet_decoder.cc	\
 	topurl_printer.cc	\
 	wreadlog.cc		\
@@ -24,7 +23,7 @@ OBJADD =
 
 EXTRA_DIST= Makefile.in
 
-LDFLAGS = $(LIBOBJS) -lcurses
+LDFLAGS = $(LIBOBJS) -lcurses -L../libwillow -lwillow
 
 .SUFFIXES: .y .l .c .cc .o
 
