--- a/willow/configure.in
+++ b/willow/configure.in
@@ -49,15 +49,13 @@ testflag -Woverloaded-virtual
 testflag -Wformat=2 
 testflag -Winit-self 
 testflag -Wswitch-enum 
-testflag -Wundef
-#testflag -Wshadow 
+dnltestflag -Wshadow 
 testflag -Wpointer-arith 
 testflag -Wcast-qual 
 testflag -Wcast-align 
 testflag -Wwrite-strings 
 testflag -Wredundant-decls 
-testflag 
--Wunreachable-code
+testflag -Wunreachable-code
 if test ! "$ac_cv_cxx_compiler_gnu" = "yes"; then
 	testflag -errtags
 fi
