--- a/ubuntu/autoinstall/netboot.cfg
+++ b/ubuntu/autoinstall/netboot.cfg
@@ -3,4 +3,5 @@
 # Generally we'll do a basic server install.
 d-i	preseed/include	string	common.cfg passwd.cfg override.cfg
 
-d-i	preseed/include_command	string	case $(debconf-get netcfg/get_domain) in wikimedia.org) echo pmtpa.cfg ;; knams.wikimedia.org) echo knams.cfg ;; yaseo.wikimedia.org) echo yaseo.cfg ;; esac; case $(debconf-get netcfg/get_hostname) in sq[13]|sq[0-9][0-9]|knsq*|yf100[0-9]|yf101[0-7]|clematis|sage|ragweed|hawthorn|fuchsia|iris|lily|mayflower|mint|vandale) echo squid.cfg ;; esac
+d-i	preseed/include_command	string	case $(debconf-get netcfg/get_domain) in wikimedia.org) echo pmtpa.cfg ;; knams.wikimedia.org) echo knams.cfg ;; yaseo.wikimedia.org) echo yaseo.cfg ;; esac; case $(debconf-get netcfg/get_hostname) in sq*|knsq*|yf100[0-9]|yf101[0-7]|clematis|sage|ragweed|hawthorn|fuchsia|iris|lily|mayflower|mint|vandale) echo squid.cfg ;; esac
+
